# nightstream-wasm-demo

./: .gitignore  README.md  build_wasm.sh  cloudflare_worker.js  serve.sh  serve_with_headers.py  wrangler.toml
.github/workflows/: sync-from-source.yml
wasm/: Cargo.toml
wasm/src/: lib.rs  riscv_asm.rs
web/: _headers  build_info.json  index.html  main.js  prover_worker.js  style.css  tokens.css
web/examples/: poseidon2_ic_batch_1.json  rv32_fibonacci.asm  toy_square.json  toy_square_folding_8_steps.json
web/pkg/: build_info.json  neo_fold_demo.d.ts  neo_fold_demo.js  neo_fold_demo_bg.wasm  neo_fold_demo_bg.wasm.d.ts
web/pkg_threads/: build_info.json  neo_fold_demo.d.ts  neo_fold_demo.js  neo_fold_demo_bg.wasm  neo_fold_demo_bg.wasm.d.ts  package.json  workerHelpers.no-bundler.js
web/pkg_threads/snippets/wasm-bindgen-rayon-38edf6e439f6d70d/src/: workerHelpers.js  workerHelpers.no-bundler.js
