[package]
name = "neo-fold-wasm-demo"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

# Make this demo self-contained (not part of the parent workspace).
[workspace]

[dependencies]
neo-fold = { path = "../../../crates/neo-fold" }
neo-math = { path = "../../../crates/neo-math" }
neo-memory = { path = "../../../crates/neo-memory" }
neo-spartan-bridge = { path = "../../../crates/neo-spartan-bridge" }
wasm-bindgen = "0.2"
js-sys = "0.3"
p3-field = "0.4.1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
wasm-bindgen-rayon = { version = "1.2", optional = true, features = ["no-bundler"] }

[features]
default = []
wasm-threads = ["dep:wasm-bindgen-rayon", "neo-fold/wasm-threads", "neo-spartan-bridge/wasm-threads"]
